--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@nx/esbuild": "16.6.0",
     "@nx/eslint-plugin": "16.6.0",
     "@nx/jest": "16.6.0",
     "@nx/js": "16.6.0",
     "@nx/linter": "16.6.0",
     "@nx/node": "16.6.0",
     "@nx/workspace": "16.6.0",
+    "@pothos/core": "^3.32.1",
+    "@pothos/plugin-relay": "^3.43.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@swc/jest": "0.2.20",
@@ -18,8 +21,10 @@
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
+    "esbuild": "^0.17.17",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "graphql-yoga": "^4.0.3",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "nx": "16.6.0",
