--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "verdaccio": "^5.0.4"
   },
   "dependencies": {
+    "@graphql-tools/batch-delegate": "^9.0.0",
     "@graphql-tools/delegate": "^10.0.0",
     "@graphql-tools/executor-http": "^1.0.2",
     "@graphql-tools/schema": "^10.0.0",
